--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-.stack-work
 out
 bower_components
+# Created by https://www.gitignore.io/api/haskell
+
+### Haskell ###
 dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
