--- a/server/server.cabal
+++ b/server/server.cabal
@@ -28,6 +28,8 @@ library
                      , persistent
                      , persistent-template
                      , persistent-postgresql
+                     , text
+                     , time
   default-language:    Haskell2010
   default-extensions:  DataKinds
                      , TypeOperators
