--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-out
-bower_components
-# Created by https://www.gitignore.io/api/haskell
-
 ### Haskell ###
 dist
 dist-*
@@ -22,5 +18,16 @@ cabal.sandbox.config
 *.eventlog
 .stack-work/
 cabal.project.local
-target
+
+### Rust ###
+target/
 Cargo.lock
+
+### Java ###
+*.class
+.mtj.tmp/
+*.jar
+*.war
+*.ear
+hs_err_pid*
+
