--- a/posts/io/haskell/haskell.cabal
+++ b/posts/io/haskell/haskell.cabal
@@ -4,7 +4,7 @@ synopsis:            Haskell Side of the IO tutorial
 description:         Please see README.md
 homepage:            https://github.com/mckeankylej/website#readme
 license:             BSD3
-license-file:        LICENSE
+license-file:        ../../../LICENSE
 author:              Kyle McKean
 maintainer:          mckean.kylej@gmail.com
 copyright:           2016 Kyle McKean
@@ -17,7 +17,6 @@ executable haskell
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , haskell
   default-language:    Haskell2010
 
 source-repository head
