--- a/posts/io/haskell/haskell.cabal
+++ b/posts/io/haskell/haskell.cabal
@@ -17,6 +17,8 @@ executable haskell
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , vector
+                     , text
   default-language:    Haskell2010
 
 source-repository head
